# gat-std

./: Cargo.toml  README.md
examples/: iter.rs  rewrite.rs
gat-std-proc/: Cargo.toml
gat-std-proc/src/: desugar.rs  lib.rs
src/: iter.rs  lib.rs  ops.rs
src/iter/: adapters.rs  test.rs
