[package]
name = "gat-std"
version = "0.1.0"
edition = "2021"
description = "Variants of Rust std traits that use GATs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CraftSpider/gat-std"
keywords = ["GAT", "lending iterator"]
categories = ["no_std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gat-std-proc = { version = "1.0", path = "gat-std-proc" }

[features]
default = ["alloc"]
alloc = []
