[package]
name = "gat-std"
version = "0.1.1"
edition = "2021"
description = "Variants of Rust std traits that use GATs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CraftSpider/gat-std"
keywords = ["GAT", "lending_iterator"]
categories = ["no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gat-std-proc = { version = "0.1", path = "gat-std-proc" }

[features]
default = ["alloc"]
alloc = []
