[package]
name = "gat-std-proc"
version = "0.1.0"
edition = "2021"
description = "Proc macros for gat-std"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CraftSpider/gat-std"
keywords = ["proc_macro", "macro"]
categories = []

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
